# ai-workitem-summarizer

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  known_failures.md
evals/: README.md  __init__.py  baselines.py  dataset.example.jsonl  draft_labels.py  fetch_dataset.py  metrics.py  run_eval.py  sample_output.json
src/workitem_summarizer/: __init__.py  ado_client.py  cli.py  models.py  summarizer.py
tests/: test_metrics.py  test_models.py
tools/: diagnose_latency.py
